Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22865

compilation failure on win32-debug

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Blocker
    • Resolution: Fixed
    • 10.5(EOL)
    • 10.5.4
    • Compiling
    • None

    Description

          68>D:\win32-debug\build\src\storage\innobase\include\sync0types.h(611,1): error C2220:  warning treated as error - no 'object' file generated (compiling source file D:\win32-debug\build\src\storage\innobase\btr\btr0btr.cc) [D:\win32-debug\build\storage\innobase\innobase.vcxproj]
          68>D:\win32-debug\build\src\storage\innobase\include\sync0types.h(611,1): warning C4307:  '*': integral constant overflow (compiling source file D:\win32-debug\build\src\storage\innobase\btr\btr0btr.cc) [D:\win32-debug\build\storage\innobase\innobase.vcxproj]
      

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              serg Sergei Golubchik
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.