MDEV-22865 compilation failure on win32-debug

ut_filename_hash(): Add better casts to please the compiler:

warning C4307: '*': integral constant overflow

This regression was introduced in
commit dd77f072f9338f784d052ae6f46a04c55eabe3fd (MDEV-22841).